--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,52 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+
+/* own style  */
+.card {
+  margin: 1rem;
+  padding: 1rem;
+  background-color: #282c34;
+  color: white;
+}
+
+.btn {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 5rem;
+  cursor: pointer;
+  transition: all 0.3s;
+  font-weight: 700;
+}
+
+.btn:hover {
+  background-color: orange;
+}
+
+section {
+  display: grid;
+}
+
+@media screen and (min-width: 600px) {
+  section {
+    grid-template-columns: auto auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  section {
+    grid-template-columns: auto auto auto auto;
   }
 }
